--- a/index.html
+++ b/index.html
@@ -243,7 +243,7 @@
                             <div class="chart-container-sm"><canvas id="repChartAttendMonth"></canvas></div>
                         </div>
                         <div class="border-t md:border-t-0 md:border-l border-gray-100 pt-4 md:pt-0 md:pl-4">
-                            <h4 class="text-xs font-bold text-gray-400 uppercase mb-2">Mes en Curso: Por día</h4>
+                            <h4 class="text-xs font-bold text-gray-400 uppercase mb-2">Días en Curso: Por día</h4>
                             <div class="chart-container-sm"><canvas id="repChartAttendDay"></canvas></div>
                         </div>
                     </div>
@@ -377,6 +377,11 @@
                         <tbody id="help-table-body" class="divide-y divide-gray-200 bg-white"></tbody>
                     </table>
                 </div>
+            </div>
+            <div class="p-4 border-t border-gray-100 flex-shrink-0 bg-white rounded-b-3xl">
+                <button onclick="ONS.UI.Help.close()" class="w-full bg-blue-900 text-white font-bold py-3 rounded-xl shadow-lg active:scale-[0.98] transition-transform text-lg flex justify-center items-center gap-2">
+                    <i data-lucide="x-circle" class="w-5 h-5"></i> Cerrar Ayuda
+                </button>
             </div>
         </div>
     </div>
