--- a/index.html
+++ b/index.html
@@ -171,6 +171,7 @@
 
             <section id="view-admin" class="view-section hidden">
                 <h2 class="text-2xl font-black text-gray-900 mb-6 flex items-center gap-2">Administración</h2>
+                
                 <div class="bg-yellow-50 rounded-3xl border border-yellow-200 p-6 mb-6">
                     <h3 class="font-bold text-yellow-900 mb-4 flex items-center gap-2"><i data-lucide="database" class="w-5 h-5"></i> Copia de Seguridad</h3>
                     <div class="flex flex-col gap-3">
@@ -179,6 +180,7 @@
                     </div>
                     <p id="backup-status" class="text-center text-xs text-yellow-800/60 mt-3 font-medium"></p>
                 </div>
+
                 <div class="grid grid-cols-2 md:grid-cols-3 gap-4 mb-6">
                     <div class="bg-white p-5 rounded-2xl border border-gray-200 shadow-sm"><div class="text-[10px] text-gray-400 font-bold uppercase tracking-wider">Miembros</div><div id="adm-stat-users" class="text-2xl font-bold text-blue-900 mt-1">0</div></div>
                     <div class="bg-white p-5 rounded-2xl border border-gray-200 shadow-sm"><div class="text-[10px] text-green-600 font-bold uppercase tracking-wider">Activos</div><div id="adm-stat-active" class="text-2xl font-bold text-green-900 mt-1">0</div></div>
@@ -211,6 +213,12 @@
                             <div class="chart-container-sm"><canvas id="admChartAttendDay"></canvas></div>
                         </div>
                     </div>
+                </div>
+
+                <div class="mt-8 mb-20 p-6 bg-red-50 rounded-3xl border border-red-100 text-center">
+                    <h3 class="text-red-900 font-bold mb-2 flex items-center justify-center gap-2"><i data-lucide="alert-triangle" class="w-5 h-5"></i> Zona de Peligro</h3>
+                    <p class="text-red-700/70 text-xs mb-4">Esta acción borrará TODOS los datos de este dispositivo. No se puede deshacer.</p>
+                    <button onclick="ONS.DataStore.factoryReset()" class="bg-red-600 text-white font-bold py-3 px-6 rounded-xl shadow-lg active:scale-[0.98] transition hover:bg-red-700 w-full md:w-auto">⚠ RESET DE FÁBRICA</button>
                 </div>
             </section>
 
@@ -358,7 +366,7 @@
     </div>
 
     <div id="modal-help" class="fixed inset-0 bg-black/60 hidden flex items-center justify-center z-[70] backdrop-blur-sm px-4 py-6">
-        <div class="bg-white rounded-3xl shadow-2xl w-full max-w-4xl flex flex-col max-h-[90vh]">
+        <div class="bg-white rounded-3xl shadow-2xl w-full max-w-4xl flex flex-col max-h-[80dvh]">
             <div class="p-5 flex justify-between items-center border-b flex-shrink-0 bg-gray-50 rounded-t-3xl">
                 <h3 class="text-xl font-black text-gray-900 flex items-center gap-2"><i data-lucide="book-open" class="w-6 h-6 text-blue-600"></i> Guía de Ejercicios</h3>
                 <button onclick="ONS.UI.Help.close()" class="p-2 hover:bg-gray-200 rounded-full text-gray-500"><i data-lucide="x" class="w-6 h-6"></i></button>
@@ -378,7 +386,7 @@
                     </table>
                 </div>
             </div>
-            <div class="p-4 border-t border-gray-100 flex-shrink-0 bg-white rounded-b-3xl">
+            <div class="p-4 pb-safe border-t border-gray-100 flex-shrink-0 bg-white rounded-b-3xl">
                 <button onclick="ONS.UI.Help.close()" class="w-full bg-blue-900 text-white font-bold py-3 rounded-xl shadow-lg active:scale-[0.98] transition-transform text-lg flex justify-center items-center gap-2">
                     <i data-lucide="x-circle" class="w-5 h-5"></i> Cerrar Ayuda
                 </button>
@@ -499,6 +507,17 @@
                 },
                 upsertLog(l) { const now = new Date().toISOString(); if (!l.logId) { l.logId = ONS.Utils.uuid(); l.createdAt = now; l.updatedAt = now; l.deleted = false; this.state.logs.push(l); } else { const idx = this.state.logs.findIndex(x => x.logId === l.logId); if (idx >= 0) this.state.logs[idx] = { ...this.state.logs[idx], ...l, updatedAt: now }; } this.persist(); },
                 deleteLog(id) { const idx = this.state.logs.findIndex(x => x.logId === id); if (idx >= 0) { this.state.logs[idx].deleted = true; this.state.logs[idx].updatedAt = new Date().toISOString(); this.persist(); } },
+                
+                // RESET DE FÁBRICA
+                factoryReset() {
+                    if(confirm("ATENCIÓN: ¿Estás seguro de que quieres borrar TODOS los datos de esta aplicación en este dispositivo?")) {
+                        if(confirm("Esta acción no se puede deshacer. ¿Borrar todo?")) {
+                            localStorage.clear();
+                            alert("Datos borrados. La aplicación se reiniciará.");
+                            window.location.reload();
+                        }
+                    }
+                },
                 sync() {}
             },
             Auth: {
