--- a/index.html
+++ b/index.html
@@ -164,6 +164,8 @@
                     <h2 class="text-2xl font-black text-gray-900">Miembros</h2>
                     <button onclick="ONS.UI.Members.openModal()" class="bg-green-600 text-white px-4 py-2 rounded-xl text-sm font-bold shadow active:scale-95 transition flex gap-2 items-center"><i data-lucide="user-plus" class="w-5 h-5"></i> Nuevo</button>
                 </div>
+                <button onclick="ONS.UI.navigateTo('admin')" class="md:hidden mb-4 text-gray-500 font-bold text-sm flex items-center gap-1"><i data-lucide="arrow-left" class="w-4 h-4"></i> Volver a Admin</button>
+
                 <div class="bg-white md:rounded-3xl shadow-sm border border-gray-200 overflow-hidden -mx-3 md:mx-0">
                     <table class="w-full text-sm text-left mobile-card-table">
                         <thead class="bg-gray-50 text-gray-500 uppercase text-xs font-semibold border-b"><tr><th class="p-4">Chalet</th><th class="p-4">Nombre</th><th class="p-4">Usuario</th><th class="p-4 text-center">Acciones</th></tr></thead>
@@ -175,6 +177,17 @@
             <section id="view-admin" class="view-section hidden">
                 <h2 class="text-2xl font-black text-gray-900 mb-6 flex items-center gap-2">Administración</h2>
                 
+                <div onclick="ONS.UI.navigateTo('members')" class="bg-white p-5 rounded-2xl border border-gray-200 shadow-sm mb-6 flex justify-between items-center cursor-pointer active:scale-[0.98] transition">
+                    <div class="flex items-center gap-3">
+                        <div class="bg-blue-100 text-blue-700 p-2 rounded-lg"><i data-lucide="users" class="w-6 h-6"></i></div>
+                        <div>
+                            <h3 class="font-bold text-gray-900 text-sm">Gestionar Miembros</h3>
+                            <p class="text-xs text-gray-500">Alta, baja y edición de usuarios</p>
+                        </div>
+                    </div>
+                    <i data-lucide="chevron-right" class="w-5 h-5 text-gray-400"></i>
+                </div>
+
                 <div class="grid grid-cols-2 md:grid-cols-3 gap-4 mb-6">
                     <div class="bg-white p-5 rounded-2xl border border-gray-200 shadow-sm"><div class="text-[10px] text-gray-400 font-bold uppercase tracking-wider">Miembros</div><div id="adm-stat-users" class="text-2xl font-bold text-blue-900 mt-1">0</div></div>
                     <div class="bg-white p-5 rounded-2xl border border-gray-200 shadow-sm"><div class="text-[10px] text-green-600 font-bold uppercase tracking-wider">Activos</div><div id="adm-stat-active" class="text-2xl font-bold text-green-900 mt-1">0</div></div>
@@ -363,7 +376,7 @@
 
     <div id="modal-help" class="fixed inset-0 bg-black/60 hidden flex items-center justify-center z-[70] backdrop-blur-sm px-4 py-6">
         <div class="bg-white rounded-3xl shadow-2xl w-full max-w-4xl flex flex-col max-h-[85dvh] overflow-hidden">
-            <div class="p-5 flex justify-between items-center border-b flex-shrink-0 bg-gray-50">
+            <div class="p-5 flex-shrink-0 flex justify-between items-center border-b flex-shrink-0 bg-gray-50">
                 <h3 class="text-xl font-black text-gray-900 flex items-center gap-2"><i data-lucide="book-open" class="w-6 h-6 text-blue-600"></i> Guía de Ejercicios</h3>
                 <button onclick="ONS.UI.Help.close()" class="p-2 hover:bg-gray-200 rounded-full text-gray-500"><i data-lucide="x" class="w-6 h-6"></i></button>
             </div>
