--- a/index.html
+++ b/index.html
@@ -456,7 +456,7 @@
                 { id: "tri_pd", name: "Jalón de Tríceps (Pushdown)", group: "TRÍCEPS", equip: "Máquina de Jalón", img: "Jalon de Triceps en Polea.png", notes: "Usa la barra o cuerda del jalón. Codos pegados a las costillas." },
                 { id: "tri_oh", name: "Jalón tras nuca Polea", group: "TRÍCEPS", equip: "Polea Alta + Cuerda", img: "Jalon por Encima de la Cabeza.png", notes: "De espaldas a la máquina. Da un paso adelante para estabilidad." },
                 { id: "tri_dips", name: "Fondos en Banco (Dips)", group: "TRÍCEPS", equip: "Banco", img: "Frondos en Banco.png", notes: "Manos en el borde del banco, pies en el suelo. Baja el glúteo cerca del banco." },
-                { id: "tri_cup", name: "Extensión Copa", group: "TRÍCEPS", equip: "1 Mancuerna pesada", img: "Extensión Triceps Copa.png", notes: "Mantén los codos apuntando hacia arriba y cerrados cerca de la cabeza." },
+                { id: "tri_cup", name: "Extensión Copa", group: "TRÍCEPS", equip: "1 Mancuerna pesada", img: "Extension Triceps Copa.png", notes: "Mantén los codos apuntando hacia arriba y cerrados cerca de la cabeza." },
                 { id: "tri_trx", name: "Extensión de Tríceps TRX", group: "TRÍCEPS", equip: "TRX", img: "Extension Triceps TRX.png", notes: "Cuerpo rígido. Flexiona codos llevando las manos a tu frente." },
 
                 { id: "core_plk", name: "Plancha", group: "CORE", equip: "Suelo", img: "Plancha.png", notes: "Apoya antebrazos y puntas de los pies. Mantén el cuerpo alineado (como una tabla) desde la cabeza a los talones, contrayendo abdomen y glúteos para no arquear la zona lumbar." },
